<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Vitamin</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_you">You</string>
    <string name="logo_char">a</string>
    <string name="logo_caption">0% penggunaan Ai</string>
    <string name="home_title">ViTaMiN (Home)</string>
    <string name="kalori">Kalori</string>
    <string name="diagnose">Diagnose</string>
    <string name="menstruasi">Menstruasi</string>
    <string name="bmi">Body Mass Index (BMI)</string>
    <string name="user_nickname">User123</string>
    <string name="nickname_label">nickname</string>
    <string name="history_label">History v</string>
    <string name="new_history_label">NEW HISTORY v</string>
    <string name="notify_label">Notify</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="new_badge">NEW</string>
    <string name="settings_title">Setting</string>
    <string name="settings_subtitle">Settings</string>
    <string name="change_nickname">Ganti Nickname</string>
    <string name="change_profile_pic">Ganti foto profil</string>
    <string name="delete_account">Hapus Akun</string>
    <string name="logout">Logout</string>
    <string name="manual_label">Manual</string>
    <string name="kamera_label">Kamera</string>
    <string name="notification_settings_title">Pengaturan Notifikasi</string>
    <string name="notification_settings_desc">Dapatkan pengingat harian &amp; saran kesehatan</string>
    <string name="notification_disabled_desc">Notifikasi sedang dinonaktifkan</string>
    <string name="notification_history_title">RIWAYAT NOTIFIKASI</string>
    <string name="notification_history_badge">4 TERBARU</string>
    <string name="notif_time_today">Hari ini</string>
    <string name="notif_time_yesterday">Kemarin</string>
    <string name="notif_time_2_days">2 hari lalu</string>
    <string name="notif_time_3_days">3 hari lalu</string>
    <string name="notif_kalori_desc">Target harian: Konsumsi 60g protein dan pertahankan asupan gizi seimbang.</string>
    <string name="notif_diagnose_desc">Indikasi migrain ringan. Istirahat cukup dan konsultasikan dengan dokter jika berlanjut.</string>
    <string name="notif_menstruasi_desc">Siklus diperkirakan sisa 3 hari. Minum air hangat secukupnya dan hindari stres.</string>
    <string name="notif_bmi_desc">Indeks Massa Tubuh Anda berada di kategori Normal. Pertahankan pola hidup sehat!</string>
</resources>
